# orchids-ntlsystoolbox-cli

./: .env.example  GUIDE_PACKAGING.md  MANIFEST.in  README.md  README_PACKAGING_PYTHON.md  package.json  pyproject.toml
.orchids/: orchids.json
examples/: inventory_servers.csv
ntl-systoolbox/: .env.example  .gitignore  GIT_WORKFLOW.md  README.md  package.json
ntl-systoolbox/config/: default.yml
ntl-systoolbox/docs/: DOSSIER_TECHNIQUE.md  MANUEL_INSTALLATION.md
ntl-systoolbox/examples/: EXEMPLE_EXECUTION_AUDIT.md  inventory.csv
ntl-systoolbox/src/: index.ts
ntl-systoolbox/src/modules/: audit.ts  backup.ts  diagnostic.ts
ntl-systoolbox/src/types/: index.ts
ntl-systoolbox/src/utils/: config.ts  logger.ts  output.ts
ntl-systoolbox/tests/integration/: cli.test.ts
ntl-systoolbox/tests/unit/: config.test.ts  output.test.ts
src/ntlsystoolbox/: __init__.py  cli.py
src/ntlsystoolbox/config/: config.yml
src/ntlsystoolbox/modules/: __init__.py  audit.py  backup.py  diagnostic.py
src/ntlsystoolbox/utils/: __init__.py  config.py  output.py
